--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -9,7 +9,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button ng-click="showVisitForm = !showVisitForm" type="button" class="btn btn-success btn-lg"><i class="fa fa-plus-square"></i>  New Interaction</button>
   </div>
   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 pull-right">
-    <img src="http://mchenrychamber.com/wp-content/uploads/2013/04/generic-profile.jpg">
+    <img src="https://s3.amazonaws.com/agefwd/jan_photo.png">
   </div>
 </div>
 <audio controls>
